<resources>
    <string name="app_name">My Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notes">Notes</string>
    <string name="archived">Archived</string>
    <string name="starred">Starred Notes</string>
    <string name="trash">Trash</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="take_a_note">Take a note</string>
    <string name="text">text</string>
    <string name="default_date">13/26/1232</string>
    <string name="default_clock">15:16</string>
    <string name="no_archived_notes">No archived notes</string>
    <string name="no_deleted_notes">No deleted Notes</string>
</resources>