<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_archived"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/archived" />
        <item
            android:id="@+id/nav_starredNotes"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/trash" />
    </group>
</menu>