<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.insert.InsertScreen">


    <!--    <ImageView-->
    <!--        android:id="@+id/insert_close"-->
    <!--        android:layout_width="30dp"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:src="@drawable/ic_baseline_close_24"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/insert_like"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_star_outline_24"
        app:layout_constraintLeft_toRightOf="@id/cv"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/insert_change_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/insert_add_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="title"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:helperText="Required*"
        app:helperTextTextColor="@color/color1"
        app:layout_constraintTop_toBottomOf="@id/cv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="3dp"
            android:hint="@string/text"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insert_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="#FAF0EF"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/date_picker"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="18dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_nav" />

    <ImageView
        android:id="@+id/time_picker"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="18dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/date_picker"
        app:layout_constraintTop_toTopOf="@id/bottom_nav" />


    <TextView
        android:id="@+id/insert_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/default_date"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/insert_time"
        app:layout_constraintTop_toTopOf="@id/bottom_nav" />

    <TextView
        android:id="@+id/insert_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/default_clock"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_nav" />


</androidx.constraintlayout.widget.ConstraintLayout>